# GhidraAutomation

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: automation.md  dir_structure.md  setting_path.md  toml_config.md
scripts/: install  run_tests.sh
src/: config_manager.py  main.py
src/conf/: main.conf
src/java/: ExportDecompiledCode.java
src/py/: config_manager.py  decompile_cli.py  install.py
src/py/utils/: string_util.py
src/utils/: logger.py
tests/: test_config_manager.py  test_decompile_cli.py  test_install.py  test_main.py
